--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
 body {
     text-align: center;
+    background-image: linear-gradient(to top, #d3cce3, #e9e4f0);
+    height: 100vh;
+    margin: 0;
 }
